--- a/style.css
+++ b/style.css
@@ -20,7 +20,11 @@ img {
   width: 50%;
 }
 
-button.delete-item.secondary-content {
+button.secondary-content {
   margin-left: 50px;
   border-radius: 5px;
+}
+
+button#btn-start-game {
+  display: none;
 }
